src/HTMLParser.g4
parser grammar HTMLParser;

options { tokenVocab=HTMLLexer; }

htmlDocument
    : scriptletOrSeaWs* XML? scriptletOrSeaWs* DTD? scriptletOrSeaWs* htmlElements*
    ;

scriptletOrSeaWs
    : SCRIPTLET
    | SEA_WS
    ;

htmlElements
    : htmlMisc* htmlElement htmlMisc*
    ;

htmlElement
    : TAG_OPEN TAG_NAME htmlAttribute*
      (TAG_CLOSE (htmlContent TAG_OPEN TAG_SLASH TAG_NAME TAG_CLOSE)? | TAG_SLASH_CLOSE)
    | SCRIPTLET
    | script
    | style
    ;

htmlContent
    : htmlChardata? ((htmlElement | CDATA | htmlComment) htmlChardata?)*
    ;

htmlAttribute
    :
    ngForStandard
    |ngForIndex
    | TAG_NAME (TAG_EQUALS  ATTVALUE_VALUE)?
    ;


htmlChardata
    : HTML_TEXT
    | SEA_WS
    ;

htmlMisc
    : htmlComment
    | SEA_WS
    ;

htmlComment
    : HTML_COMMENT
    | HTML_CONDITIONAL_COMMENT
    ;

script
    : SCRIPT_OPEN (SCRIPT_BODY | SCRIPT_SHORT_BODY)
    ;

style
    : STYLE_OPEN (STYLE_BODY | STYLE_SHORT_BODY)
    ;


    //NGFOR

    ngfor_body: ID SPACE IN SPACE ID;

    ngfor_index: ID SPACE Equals SPACE ID;

     ngfor_array: ID SPACE IN SPACE Equals SPACE ID;


    ngForStandard :
        NGFOR NG_ATTRBIUTE SINGLE_QOUTE ngfor_body SINGLE_QOUTE
       |
       NGFOR NG_ATTRBIUTE SINGLE_QOUTE ngfor_body SEMICOLON ngfor_index SINGLE_QOUTE
       ;

     ngForIndex :
         NGFOR NG_ATTRBIUTE SINGLE_QOUTE ngfor_body SEMICOLON ngfor_index SINGLE_QOUTE
         ;
